# delphi

./: .gitignore  DEPLOY.md  Delphi Build Spec.md  README.md  render.yaml
agents/news/: .env.example  main.py  requirements.txt
agents/reviews_a/: .env.example  main.py
agents/reviews_b/: .env.example  main.py  requirements.txt
db/: _generate_seed.py  schema.sql  seed.py  seed_feedback_survey.json  seed_reviews_store.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/lib/: delphi.ts
libs/delphi_common/: pyproject.toml
libs/delphi_common/delphi_common/: __init__.py  a2a.py  db.py  llm.py
orchestrator/: .env.example  config.py  main.py  requirements.txt
orchestrator/adapters/: a2a_client.py
orchestrator/domains/: _domains.md  account.md  checkout.md  delivery.md  payments.md  returns.md  search.md
orchestrator/intelligence_layer/: graph.py  nodes.py  persistence.py  state.py
orchestrator/tests/: conftest.py  test_graph_smoke.py  test_persistence.py
scripts/: run_all.sh
